# pokedex-kmp

./: README.md  build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/pokedex/onedev/: MainActivity.kt  MainApplication.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/: App.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/di/: PresentationModule.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/intent/: PokemonDetailIntent.kt  PokemonIntent.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/navigation/: AppNavHost.kt  Screen.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/state/: PokemonDetailState.kt  PokemonState.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/ui/: PokemonDetailScreen.kt  PokemonListScreen.kt  PokemonScreen.kt
composeApp/src/commonMain/kotlin/com/pokedex/onedev/presentation/utils/: Utils.kt
composeApp/src/commonMain/kotlin/org/example/project/: App.kt
composeApp/src/commonTest/kotlin/com/pokedex/onedev/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/pokedex/onedev/: MainViewController.kt
data/: build.gradle.kts
data/cpp/: CMakeLists.txt  native-lib.cpp
data/src/androidMain/kotlin/com/onedev/pokedex/data/core/: DataShareLogic.android.kt  (+1 more)
domain/: build.gradle.kts
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
(+17 files in other folders)
